--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/svetlana-shcherbin/it-academy#readme",
   "dependencies": {
-    "fs-extra": "^11.1.0"
+    "fs-extra": "^11.1.0",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "prettier": "2.8.3"
