--- a/final_project/package.json
+++ b/final_project/package.json
@@ -12,5 +12,10 @@
     "ajv": "^8.12.0",
     "chai": "^4.3.8",
     "cypress": "^12.17.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1"
   }
 }
