--- a/final_project/package.json
+++ b/final_project/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "chai": "^4.3.8",
-    "cypress": "^12.17.4"
+    "cypress": "^12.17.4",
+    "eslint-config-prettier": "^9.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1"
