--- a/final_project/package.json
+++ b/final_project/package.json
@@ -4,7 +4,7 @@
   "description": "AQA final project",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress open"
+    "test": "npx cypress run –headless –spec"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "@faker-js/faker": "^8.0.2",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1"
+    "eslint-plugin-import": "^2.28.1",
+    "mocha-foo-reporter": "^0.0.1"
   }
 }
